fixed layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,15 @@
   padding: 0;
   box-sizing: border-box;
 }
+#root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+main {
+  flex: 1;
+  width: 100%;
+}
 html,
 body {
   height: 100%;
@@ -10,7 +19,6 @@ body {
   margin: 0;
   padding: 0;
 }
-
 .nav-bar {
   width: 100%;
   height: 7vh;
@@ -41,10 +49,16 @@ body {
   .brand-text {
     display: none;
   }
+  .avatar {
+    display: none;
+  }
 }
 @media (max-width: 545px) {
   .avatar {
     display: none;
+  }
+  .stylist-pricing {
+    font-size: small !important;
   }
 }
 .main-page {
@@ -70,6 +84,9 @@ body {
   align-content: flex-end;
   padding: 1rem;
   background-color: rgb(235, 235, 235);
+  position: relative;
+  left: 0;
+  bottom: 0;
 }
 .footer-text {
   display: flex;
@@ -77,12 +94,13 @@ body {
   font-family: "quicksand";
 }
 .pricing-page {
-  height: 100vh;
+  height: 100%;
   width: auto;
   padding: 1rem;
   background-image: url("./assets/background.jpeg");
   background-size: cover;
   background-position: center;
+  flex: 1;
 }
 .stylist-section {
   display: flex;
